prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-api-ingress
  namespace: prod
  labels:
    app: task-manager-api
    environment: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # This annotation controls which slot is LIVE
    # Switch between blue and green by changing service name below
spec:
  ingressClassName: nginx
  rules:
  - host: task-manager-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-manager-api-blue-svc   # ← switch to green-svc to go green
            port:
              number: 80
